Ugly for now, but to allow links we need |safe.

--- a/data_tables_tags/templates/data_tables_tags/data_table.html
+++ b/data_tables_tags/templates/data_tables_tags/data_table.html
@@ -11,7 +11,7 @@
         {% for row in rows %}
             <tr>
                 {% for key, value in row.items %}
-                    <td>{{ value }}</td>
+                    <td>{{ value|safe }}</td>
                 {% endfor %}
             </tr>
         {% empty %}
