Add the option to have... options.

--- a/data_tables_tags/templates/data_tables_tags/data_table.html
+++ b/data_tables_tags/templates/data_tables_tags/data_table.html
@@ -16,7 +16,7 @@
             </tr>
         {% empty %}
             <tr><td colspan="{{ column_count }}">
-                There is no day pass activity for this time period.
+                There is no data available.
             </td></tr>
         {% endfor %}
     </tbody>
@@ -28,7 +28,10 @@ $(document).ready(function() {
         dom: 'Bfrtip',
         buttons: [
             'copy', 'csv', 'excel', 'pdf', 'print'
-        ]
+        ],
+        {% endif %}
+        {% if options %}
+        {{ options }}
         {% endif %}
     });
 });
